--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@ nav.nav-2 a:hover {
                 <h2 class="lastCong">Félicitations ! Vous avez gagné !</h2>
                 <ol class="margLastL">
                     <li>1) Cliquez sur le bouton "OK".</li>
-                    <li>2) Entrez vos coordonnées et payez €9.99 pour la Chicco Mommy Box.</li>
+                    <li>2) Entrez vos coordonnées et payez 9,99 € pour le Coffret Dexter.</li>
                     <li>3) Le Coffret Dexter sera livré dans un délai de 2 à 4 jours.</li>
                 </ol>
                 <div class="nvnvmdlsl">
